# gns3-client

./: .gitignore  README.md  openapi.json  pyproject.toml  setup.py
.github/workflows/: bashate.yml  coverage.yml  format.yml  imports.yml  lint.yml  mypy.yml  release.yml  ruff.yml  shellcheck.yml  tests.yml
client/: setup.py
client/.openapi-generator/: FILES
client/docs/models/: ACE.md  ACECreate.md  ACEType.md  ACEUpdate.md  AdapterType.md  ApplianceVersion.md  ApplianceVersionImages.md  AutoIdlePC.md  Capabilities.md  Compression.md  ComputeDockerImage.md  ComputeVirtualBoxVM.md  CustomAdapter.md  Docker.md  Drawing.md  Engine.md  Gns3serverSchemasControllerNodesLinkType.md  Gns3serverSchemasControllerTemplatesCategory.md  Iou.md  Label.md  Link.md  LinkCreate.md  LinkUpdate.md  Node.md  NodeCreate.md  NodeDuplicate.md  NodeStatus.md  NodeUpdate.md  ProjectCompression.md  ProjectCreate.md  ProjectDuplicate.md  ProjectStatus.md  ProjectUpdate.md  Qemu.md  QemuDiskImageAdapterType.md  QemuDiskImageFormat.md  Resource.md  ResourcePool.md  ResourcePoolCreate.md  ResourceType.md  (+7 more)
client/openapi_client/: configuration.py  exceptions.py  rest.py
client/openapi_client/model/: ace.py  ace_type.pyi  ace_update.py  appliance_version.py  auto_idle_pc.pyi  availability.pyi  capabilities.py  compute.pyi  compute_create.py  compute_create.pyi  compute_update.pyi  compute_v_mware_vm.py  disk_interface.pyi  docker.py  drawing.pyi  dynamips.pyi  dynamips_slot.pyi  gns3_vm.py  gns3server_schemas_common_console_type.py  http_validation_error.py  image_type.py  kvm.py  link_style.pyi  logged_in_user_update.py  midplane.pyi  node.pyi  node_create.py  node_status.pyi  node_type.py  node_update.py  npe.pyi  platform.pyi  privilege.pyi  project_compression.pyi  project_create.py  qemu.py  qemu_disk_image_adapter_type.py  qemu_disk_image_preallocation.py  qemu_disk_image_subformat.py  qemu_disk_image_update.pyi  (+10 more)
client/openapi_client/paths/: __init__.py
client/test/test_models/: test_ace.py  test_ace_type.py  test_ace_update.py  test_adapter_type.py  test_appliance_version.py  test_arch.py  test_availability.py  test_body_load_project_v3_projects_load_post.py  test_capabilities.py  test_category_input.py  test_chassis.py  test_compute.py  test_compute_create.py  test_compute_docker_image.py  test_compute_update.py  test_compute_virtual_box_vm.py  test_credentials.py  test_custom_adapter.py  test_disk_interface.py  test_docker.py  test_dynamips.py  test_dynamips_wic.py  test_gns3server_schemas_common_console_type.py  test_gns3server_schemas_controller_links_link_type.py  test_gns3server_schemas_controller_nodes_link_type.py  test_http_validation_error.py  (+33 more)
docs/: mkdocs.yml
docs/site/: 404.html  index.html  objects.inv  sitemap.xml
docs/source/: .pages  index.md
gns3client/: __init__.py  cli.py  client.py
gns3client/api/: __init__.py  base_api.py  controller.py  drawings.py  links.py  nodes.py  projects.py  snapshots.py  templates.py  users.py
gns3client/client/: README.md
gns3client/openapi_client/: __init__.py  api_client.py  configuration.py  rest.py  schemas.py
gns3client/resources/: __init__.py  link.py  node.py  project.py  snapshot.py  template.py
tests/: conftest.py  test_base_api.py  test_links_api.py  test_nodes_api.py  test_projects_api.py  test_users_api.py
tests/test_api/: test_controller_api.py  test_drawings_api.py  test_links_api.py  test_nodes_api.py  test_snapshots_api.py  test_templates_api.py
tests/test_resources/: __init__.py  conftest.py  test_link.py  test_node.py  test_project.py  test_template.py
(+1401 files in other folders)
