[tool.poetry]
name = "gns3client"
version = "0.1.0"
description = "GNS3 client"
authors = ["Mark Paronyan <markparonian@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openapi-client = {path = "gns3client/client"}
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gns3client = "gns3client.cli:cli"
